# fastapi-Quartar3

./: poetry.txt
.mypy_cache/3.12/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _queue.data.json  _queue.meta.json  _random.data.json  _random.meta.json  _socket.data.json  _socket.meta.json  _ssl.data.json  _ssl.meta.json  _stat.data.json  _stat.meta.json  _thread.data.json  _thread.meta.json  (+132 more)
.mypy_cache/3.12/_typeshed/: __init__.data.json  __init__.meta.json  importlib.data.json  importlib.meta.json
.mypy_cache/3.12/annotated_types/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/asyncio/: constants.data.json  constants.meta.json  coroutines.data.json  coroutines.meta.json  exceptions.data.json  exceptions.meta.json  mixins.data.json  mixins.meta.json  threads.data.json  threads.meta.json  timeouts.data.json  timeouts.meta.json  windows_utils.data.json  windows_utils.meta.json
.mypy_cache/3.12/backend_authportal/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/collections/: __init__.data.json  __init__.meta.json  abc.data.json  abc.meta.json
.mypy_cache/3.12/concurrent/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/ctypes/: __init__.data.json  __init__.meta.json  _endian.data.json  _endian.meta.json
.mypy_cache/3.12/email/: __init__.data.json  __init__.meta.json  _policybase.data.json  _policybase.meta.json  charset.data.json  charset.meta.json  contentmanager.data.json  contentmanager.meta.json  errors.data.json  errors.meta.json  header.data.json  header.meta.json  message.data.json  message.meta.json  policy.data.json  policy.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.12/html/: __init__.data.json  __init__.meta.json
.mypy_cache/3.12/http/: __init__.data.json  __init__.meta.json  client.data.json  client.meta.json  cookies.data.json  cookies.meta.json
.mypy_cache/3.12/idna/: idnadata.data.json  idnadata.meta.json  intranges.data.json  intranges.meta.json  package_data.data.json  package_data.meta.json
.mypy_cache/3.12/importlib/: _abc.data.json  (+13 more)
AuthPortal/: index.ipynb
AuthPortal/backend_authportal/: .env  Dockerfile  pyproject.toml  test.db
AuthPortal/backend_authportal/backend_authportal/: creating_tables.py  database.py  index.ipynb  main.py  model.py  newmain.py  setting.py  settings.py  token_utils.py
AuthPortal/frontend_authportal/: next.config.js  package-lock.json  package.json
Dockerpro/: README.md  docker.txt  pyproject.toml
Dockerpro/src/: main.py
devcontainer/: Dockerfile  Dockerfile.dev  pyproject.toml
devcontainer/app/: main.py
devcontainer/dev_project/: main.py
docker/: README.md  questions.txt
docker/Dockerpro/: Dockerfile  README.md  pyproject.toml
docker/compose/: Dockerfile  README.md  compose.yml  pyproject.toml
docker/compose/app/: main.py
docker/devcontainer/: Dockerfile  README.md  pyproject.toml
docker/devcontainer/.devcontainer/: devcontainer.json
docker/devcontainer/devcontainer/: main.py
docker/docker_db/: .env  Dockerfile  compose.yml  pyproject.toml
docker/docker_db/src/: main.py  settings.py
docker/newdevcontainer/: Dockerfile.dev  README.md  pyproject.toml
docker/newdevcontainer/newdevcon/: main.py
easyphone/: .gitignore  Dockerfile.dev  pyproject.toml
easyphone/easyphone/: main.py
extrafolder/: assginment.json  dockerreading.txt
fastapitiangolo/concurrency_and_parallel/: README.md  index.ipynb
fastapitiangolo/pythontypes/: README.md  index.py
fastapitiangolo/tutorial_userGuide/: README.md
fastapitiangolo/tutorialfastapi/: README.md  models.py  pyproject.toml
generative_repo/image2video/: pyproject.toml
generative_repo/my_package/: __init__.py  calling.py  main.py  module1.py  module2.py
generative_repo/mypractics/: callingfun.py
generative_repo/text_voice/: index.ipynb  index.py
kafka/: .gitignore  compose.ymal  compose.yml  create_topic.sh
kafka/kafa_messeging/: Dockerfile  README.md  pyproject.toml
kafka/kafa_messeging/src/: main.py
kafka/kafka_messaging/: .gitignore  Dockerfile
learnAI/class1/: compose.yaml  compose.yml
loginsystem/backend_authportal/: .gitignore  Dockerfile  compose.yaml  pyproject.toml
loginsystem/front_end/: package-lock.json  package.json  tailwind.config.ts
uit-api-class/: .env  Dockerfile.dev  README.md  callingsum.py  pyproject.toml
uit-api-class/class1/: __init__.py  main.py  setting.py  sum.py
whatismicroservices/: README.md
(+166 files in other folders)
