[tool.poetry]
name = "newdevcon"
version = "0.1.0"
description = ""
authors = ["arman229 <armanashraf015@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlmodel = {extras = ["standared"], version = "^0.0.18"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
